crates/ir/tests/snapshots/lower_test__tuples__tuple_nested.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module tuples__tuple_nested

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (s) -> Unit

fn main() -> Unit =
  let v1: (~Int, ~Int) = tuple(1, 2)
  let v0: ((~Int, ~Int), ~Int) = tuple(v1, 3)
  let v2: (~Int, ~Int) = tuple_project v0.0
  let v3: Int = tuple_project v0.1
  let v4: ~Int = tuple_project v2.0
  let v5: ~Int = tuple_project v2.1
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Unit = call println(v6, v3)
  v7
