crates/ir/tests/snapshots/lower_test__tuples__tuple_trait_instance_owned.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module tuples__tuple_trait_instance_owned

trait Summarize[k8] { summarize(k8): String }
instance tuples__tuple_trait_instance_owned.Summarize[$Tuple2$Int$String] { summarize=Summarize$$$Tuple2$Int$String$$summarize }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn make_pair(v0: ~String) -> (Int, String) =
  let v1: (~Int, ~String) = tuple(1, v0)
  v1

fn main() -> Unit =
  let v3: (Int, String) = call make_pair("hi")
  let v4: Dict[tuples__tuple_trait_instance_owned.Summarize, (Int, String)] = get_dict tuples__tuple_trait_instance_owned.Summarize[(Int, String)]
  let v5: String = trait_call tuples__tuple_trait_instance_owned.Summarize.summarize(v4, v3)
  let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v2, v5)
  v6

fn Summarize$$$Tuple2$Int$String$$summarize(v7: (Int, String)) -> ~String =
  "ok"
